# A-Data-Intensive-AI-Platform

./: .editorconfig  .gitignore  CHAPTER_1_COMPLETE.md  FILE_MANIFEST.md  IMPLEMENTATION_REPORT.md  QUICKSTART.md  README.md  RELEASE_NOTES_v0.1.0.md
apps/api/: .env.sample  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
apps/api/alembic/: env.py
apps/api/config/: prometheus.yml
apps/api/config/grafana/dashboards/: service-quality-envelope.json
apps/api/config/grafana/provisioning/dashboards/: default.yml
apps/api/scripts/: init-db.sql  start-production.sh
apps/api/src/atlas_api/: __init__.py  config.py  main.py
apps/api/src/atlas_api/adapters/: __init__.py  database.py  redis.py
apps/api/src/atlas_api/domain/: __init__.py
apps/api/src/atlas_api/instrumentation/: __init__.py  logging.py  metrics.py  tracing.py
apps/api/src/atlas_api/middleware/: __init__.py  reliability.py
apps/api/src/atlas_api/reliability/: __init__.py  circuit_breaker.py  retry.py  slo.py
apps/api/src/atlas_api/repositories/: __init__.py
apps/api/src/atlas_api/routers/: __init__.py  health.py
apps/api/src/atlas_api/schemas/: __init__.py  health.py
apps/api/src/atlas_api/services/: __init__.py
apps/api/src/atlas_api/utils/: __init__.py
apps/api/src/atlas_api/workers/: __init__.py
apps/api/tests/: __init__.py  conftest.py
apps/api/tests/integration/: __init__.py
apps/api/tests/load/: locustfile.py  stress_test.py
apps/api/tests/unit/: __init__.py  test_health.py  test_middleware.py  test_reliability.py
docs/: SCAFFOLD_SUMMARY.md
docs/ADRs/: 001-architecture-overview.md  adr-001-service-quality-envelope.md
docs/api/: reliability-endpoints.md
docs/architecture/: ch1-reliable-scalable-maintainable.md
docs/runbooks/: 001-getting-started.md  002-service-quality-envelope.md
scripts/: chaos_tests.sh
